--- a/environment.yml
+++ b/environment.yml
@@ -38,10 +38,11 @@ dependencies:
   - xz=5.6.4
   - yaml=0.2.5
   - zlib=1.2.13
+  - pip
   - pip:
     - argon2-cffi==23.1.0
     - argon2-cffi-bindings==21.2.0
-    - borch==0.1.6
+    - borch==0.10.0
     - botorch==0.10.0
     - certifi==2025.4.26
     - cffi==1.17.1
